# Social-Food

./: .dockerignore  Dockerfile  Procfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
donations/: asgi.py  settings.py  urls.py  wsgi.py
donations/apps/voluntary/: admin.py  apps.py  models.py  serializers.py  utils.py  views.py
donations/apps/voluntary/migrations/: 0001_initial.py
scripts/: start.sh
